# folderDeck

./: .gitignore  README.md  index.html  jsconfig.json  package.json  tailwind.config.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: release.yml
src/: App.vue  main.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: copy.rs  data.rs  main.rs  open.rs  read.rs  runtime.rs  state.rs  structs.rs  update.rs  utils.rs
src/components/: AddProject.vue  Card.vue  Filters.vue  List.vue  Loading.vue  Navigation.vue  Search.vue  SearchResults.vue  Update.vue
src/icons/: icon_arrow-path.vue  icon_camera.vue  icon_caret.vue  icon_chart-bar-square.vue  icon_clock.vue  icon_cog.vue  icon_document-duplicate.vue  icon_document-text.vue  icon_folder-open.vue  icon_folder-plus.vue  icon_folder.vue  icon_magnifying-glass.vue  icon_photo.vue  icon_plus.vue  icon_speaker-wave.vue
src/locales/: en.json
src/plugins/: locale.js  router.js
src/store/: store.js
src/utils/: entries.js  files.js  finder.js  log.js  notify.js  numbers.js  paths.js  performance.js  settings.js  track.js  updater.js
src/views/: Projects.vue  Settings.vue  Start.vue
tasks/: version.js
tasks/utils/: dir.js  git.js  update.js
