[package]
name = "folderdeck"
version = "0.2.8"
description = "Open-source file management app for project folders."
authors = ["More Than Coding"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
chrono = "0.4.35"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.4", features = [ "process-relaunch", "updater", "notification-all", "fs-exists", "window-center", "window-maximize", "window-unmaximize", "fs-read-dir", "path-all", "dialog-open", "window-start-dragging"] }
tauri-plugin-aptabase = "0.4"
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1.36.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
default = [] # No features enabled by default
use_default_aptabase_id = [] # Feature to use a default APTABASE_ID
